--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,25 @@
 cmake_minimum_required(VERSION 3.10)
 project(RemoteControlTool LANGUAGES CXX)
 
+# ---- C++17 ----
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+# ---- [QUAN TRỌNG] ÉP STATIC RUNTIME (/MT) ----
+# Giúp file .exe chạy được trên máy khác mà không cần cài Visual C++ Redistributable
+set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+add_compile_options(/MT$<$<CONFIG:Debug>:d>)
+
+# ---- Build static library (để tránh phụ thuộc DLL ngoài) ----
+set(BUILD_SHARED_LIBS OFF)
+
+# ---- Tìm package (vcpkg) ----
+find_package(Boost REQUIRED COMPONENTS system)
+find_package(nlohmann_json CONFIG REQUIRED)
+
+# ---- Source Files ----
+set(SERVER_SOURCES
+    main.cpp
 # C++17
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -23,11 +42,13 @@ set(SERVER_SOURCES
 
 add_executable(server ${SERVER_SOURCES})
 
+# ---- Include Path ----
 # Đưa "src" vào include path để #include "interfaces/IRemoteModule.hpp" hoạt động
 target_include_directories(server PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/src
 )
 
+# ---- Link Libraries (Thư viện liên kết) ----
 # (tùy chọn) macro bạn dùng
 target_compile_definitions(server PRIVATE
     WIN32_LEAN_AND_MEAN
@@ -41,6 +62,14 @@ target_link_libraries(server PRIVATE
     ws2_32
     user32
     advapi32
+    shlwapi        # Cần cho xử lý đường dẫn file
+    ole32          # Cần cho COM (CoInitialize)
+    mf             # Cần cho Webcam (Media Foundation)
+    mfplat         # Cần cho Webcam
+    mfreadwrite    # Cần cho Webcam
+    mfuuid         # Cần cho Webcam
+    gdiplus        # Cần cho Screenshot (lưu ảnh JPEG/PNG)
+)
     # mf              # <--- [THÊM] Media Foundation
     # mfplat          # <--- [THÊM]
     # mfreadwrite     # <--- [THÊM]
